[package]
name = "blackjack-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.8", features = ["ws"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4", "fast-rng", "serde"] }
rand = "0.10.0"
dotenvy = "0.15.7"
futures = "0.3.31"
tower-http = { version = "0.6.8", features = ["cors"] }
